# Oxyde-vault-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.sh
design/: intial_synchronization.puml  push_changes_multiple_clients.puml  push_changes_single_client.puml
src/: configuration.rs  errors.rs  main.rs  router.rs  state.rs
src/git/: git_client.rs  mod.rs
src/handlers/: health_check.rs  mod.rs  revisions.rs
src/handlers/api_v1/: health_check.rs  mod.rs
src/handlers/api_v1/revisions/: latest.rs  mod.rs
src/handlers/api_v1/revisions/revision_id/: get_revision.rs  mod.rs
