[package]
name = "Oxyde-vault-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version =  "0.8.8", features = [] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["default"]}
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
anyhow = "1.0.102"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["trace"] }