[package]
name = "Oxyde-vault-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = [] }
dotenvy = "0.15.7"
envy = "0.4.2"
git2 = { version = "0.20.4", features = ["https"] }
serde = { version = "1.0.228", features = ["derive", "default"] }
serde_json = "1.0.149"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = { version = "0.1.44", features = ["default"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
